# securedvote

./: .gitignore  Cargo.toml  README.md
data/: candidates.json  candidates.toml  voters.json  voters.toml
src/: app.rs  ballot.rs  ballotchain.rs  block.rs  blockchain.rs  candidate.rs  candidates.rs  client.rs  lib.rs  main.rs  node.rs  vote.rs
