[package]
name = "securedvote"
version = "0.0.1"
authors = ["Ali Eren <alieren.demireller@gmail.com>"]
edition = "2018"

[lib]
name = "ballotchainlib"
path = "src/lib.rs"

[[bin]]
name = "ballotchain"
path = "src/main.rs"

[dependencies]
time = "0.2.26"
timer = "0.2.0"
futures = "0.3.14"
libp2p = "0.37.1"
serde = "1.0.125"
once_cell = "1.5"
log = "0.4"
pretty_env_logger = "0.4"
crypto-hash = "0.3.3"
tokio = "1.5.0"
hyper = "0.14.5"
json = "0.12.4"
hex = "0.3.2"